test_regress/t/t_enum_type_bad.out
%Error-ENUMVALUE: t/t_enum_type_bad.v:36:9: Implicit conversion to enum 'enum{}t.e_t' from 'bit[31:0]' (IEEE 1800-2023 6.19.3)
                                          : ... note: In instance 't'
                                          : ... Suggest use enum's mnemonic, or static cast
   36 |     e = 1;   
      |         ^
                  ... For error description see https://verilator.org/warn/ENUMVALUE?v=latest
%Error-ENUMVALUE: t/t_enum_type_bad.v:37:9: Implicit conversion to enum 'enum{}t.o_t' from 'enum{}t.e_t' (IEEE 1800-2023 6.19.3)
                                          : ... note: In instance 't'
                                          : ... Suggest use enum's mnemonic, or static cast
   37 |     o = e;   
      |         ^
%Error-ENUMVALUE: t/t_enum_type_bad.v:43:13: Implicit conversion to enum 'enum{}t.o_t' from 'enum{}t.e_t' (IEEE 1800-2023 6.19.3)
                                           : ... note: In instance 't'
                                          : ... Suggest use enum's mnemonic, or static cast
   43 |     o = str.m_e;   
      |             ^~~
%Error: Exiting due to
